<resources>
  <string name="app_name">Expense Book</string>
  <string name="add">Add</string>
  <string name="view_report">View report</string>
  <string name="income">Income</string>
  <string name="spend">Spend</string>
  <string name="balance">Balance</string>
  <string name="settings">Settings</string>

  <string name="add_book">Add new book</string>
  <string name="add_page">Add new page</string>

  <string name="cate_eat">Eating</string>
  <string name="cate_traffic">Traffic</string>
  <string name="cate_personalize">Personalize</string>
  <string name="cate_clothing">Clothing</string>
  <string name="cate_other">Other</string>

  <string name="book_new">New expense book</string>
  <string name="expense_book_for">Expense Book For</string>

  <string name="select_month_year">Select Month/Year</string>

  <string name="dialog_back">Back</string>
  <string name="dialog_done">Done</string>

  <string name="month_january">January</string>
  <string name="month_february">February</string>
  <string name="month_march">March</string>
  <string name="month_april">April</string>
  <string name="month_may">May</string>
  <string name="month_june">June</string>
  <string name="month_july">July</string>
  <string name="month_august">August</string>
  <string name="month_september">September</string>
  <string name="month_october">October</string>
  <string name="month_november">November</string>
  <string name="month_december">December</string>

  <string name="select_month">Select month</string>
  <string name="select_year">Select year</string>

</resources>
