<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="44dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="44dp">

  <TextView
      android:id="@+id/tvIncomeTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/income"
      android:textAppearance="@style/TextAppearance.AppCompat.Caption"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvIncome"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvIncomeTitle"
      tools:text="35.000.000" />

  <TextView
      android:id="@+id/tvSpendTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/spend"
      android:textAppearance="@style/TextAppearance.AppCompat.Caption"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvIncome" />

  <TextView
      android:id="@+id/tvSpend"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvSpendTitle"
      tools:text="24.000.000" />

  <TextView
      android:id="@+id/tvBalanceTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/balance"
      android:textAppearance="@style/TextAppearance.AppCompat.Caption"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvSpend" />

  <TextView
      android:id="@+id/tvBalance"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvBalanceTitle"
      tools:text="6.000.000" />

</android.support.constraint.ConstraintLayout>